--- a/index.html
+++ b/index.html
@@ -47,9 +47,18 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/Akire98" target="_blank">Erika Venter</a>
+          and is
+          <a
+            href="https://github.com/Akire98/Homework-challenge"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a href="https://dancing-crisp-155b73.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
