Edited Netlify URL

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             on GitHub</a
           >
           and
-          <a href="https://dancing-crisp-155b73.netlify.app/" target="_blank"
+          <a href="https://www.netlify.com/" target="_blank"
             >hosted on Netlify</a
           >
         </p>
